--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,19 +11,26 @@
     android:background="@drawable/rainy_background"
     tools:context=".MainActivity">
 
-
-    <fragment
-        android:id="@+id/autocomplete_fragment"
-        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+    <androidx.cardview.widget.CardView
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="6dp"
-
+        android:layout_height="100dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/cur_temp"
         app:layout_constraintEnd_toStartOf="@+id/search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        >
+        <fragment
+            android:id="@+id/autocomplete_fragment"
+            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:visibility="gone"
+            />
+    </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:id="@+id/cur_temp"
@@ -67,7 +74,7 @@
 
     <TextView
         android:id="@+id/min_temp"
-        android:layout_width="15dp"
+        android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:text="10"
         android:textColor="@color/white"
@@ -142,16 +149,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reycleview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintVertical_bias="0.16000003" />
-
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/search"
